force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/External_Task_URL__c.field-meta.xml
<CustomField>
    <fullName>External_Task_URL__c</fullName>
    <description>JIRA Issue, Asana Task or other ticketing system URL if applicable</description>
    <inlineHelpText>JIRA Issue, Asana Task or other ticketing system URL if applicable</inlineHelpText>
    <label>External Task URL</label>
    <type>Url</type>
</CustomField>