force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Actual_Duration__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Actual_Duration__c</fullName>
    <formula>IF ( ISBLANK(MPM4_BASE__Actual_Finish_Date__c),  MPM4_BASE__Due_Date__c - IF(ISBLANK( MPM4_BASE__Actual_Start_Date__c),  MPM4_BASE__Start_Date__c,  MPM4_BASE__Actual_Start_Date__c ) + 1, MPM4_BASE__Actual_Finish_Date__c  - IF(ISBLANK( MPM4_BASE__Actual_Start_Date__c),  MPM4_BASE__Start_Date__c,  MPM4_BASE__Actual_Start_Date__c )+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>