force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Additional_Information__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Additional_Information__c</fullName>
    <label>Additional Information</label>
    <length>130000</length>
    <type>Html</type>
</CustomField>