force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The user responsible for completing the task. Defaults to current user if left blank.</inlineHelpText>
    <label>zDeprecated</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Tasks_Assigned</relationshipName>
    <type>Lookup</type>
</CustomField>