force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Blocked__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Blocked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this task blocked for some reason?</inlineHelpText>
    <label>Blocked</label>
    <type>Checkbox</type>
</CustomField>