force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Blocked_Reason__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Blocked_Reason__c</fullName>
    <inlineHelpText>If blocked, why?</inlineHelpText>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>