force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Complete__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>The status of this task. A task is either in-complete or complete.</inlineHelpText>
    <label>Complete</label>
    <type>Checkbox</type>
</CustomField>