force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Daily_Resource_Allocation__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Daily_Resource_Allocation__c</fullName>
    <description>The percentage of a resources work day allocated to working on this task.</description>
    <label>Daily Resource Allocation Percentage</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>