force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Days_Late__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Days_Late__c</fullName>
    <inlineHelpText>How many days late is this task?</inlineHelpText>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>