force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Days_Late_Formula__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Days_Late_Formula__c</fullName>
    <formula>Today() -  MPM4_BASE__Due_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Late Formula</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>