force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Description__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Description__c</fullName>
    <inlineHelpText>The general description of the task. For example, what is the purpose of the task.</inlineHelpText>
    <label>Description</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>