force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Due_Date__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Due_Date__c</fullName>
    <inlineHelpText>The date this task is due to be completed. Defaults to milestone due date if left blank.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>