force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Duration_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Duration_In_Minutes__c</fullName>
    <defaultValue>60</defaultValue>
    <description>Contains the event length, in minutes.</description>
    <inlineHelpText>Contains the event length, in minutes.</inlineHelpText>
    <label>Duration In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>