force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Email_Template_ID__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Email_Template_ID__c</fullName>
    <label>Email Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>