force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__End_Date_Time__c</fullName>
    <inlineHelpText>Changing the end time will update your calendar as well as your project tasks due date.</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>