force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__End_Time__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__End_Time__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>