force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Expense_Balance__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Expense_Balance__c</fullName>
    <formula>MPM4_BASE__Estimated_Expense__c - MPM4_BASE__Total_Expense__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as estimated expense - total expense</inlineHelpText>
    <label>Expense Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>