force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Gantt_Color__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Gantt_Color__c</fullName>
    <inlineHelpText>You may update this with HTML color code that the record should display as on the gantt chart.</inlineHelpText>
    <label>Gantt Color</label>
    <length>6</length>
    <type>Text</type>
</CustomField>