force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Hours_Balance__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Hours_Balance__c</fullName>
    <formula>MPM4_BASE__Estimated_Hours__c - MPM4_BASE__Total_Hours__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculated as estimated hours - total hours</inlineHelpText>
    <label>Hours Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>