force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__ImportID__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__ImportID__c</fullName>
    <label>Import ID</label>
    <length>80</length>
    <type>Text</type>
</CustomField>