force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Index__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Index__c</fullName>
    <externalId>true</externalId>
    <label>Index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>