force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Last_Email_Received__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Last_Email_Received__c</fullName>
    <description>Date Time the last email was sent to this task.</description>
    <inlineHelpText>The date the last email was attached to this task. A task can be created via an email, and additional emails can be attached to the task in the notes section.</inlineHelpText>
    <label>Last Email Received</label>
    <type>DateTime</type>
</CustomField>