force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Milestone_Deadline__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Milestone_Deadline__c</fullName>
    <formula>MPM4_BASE__Project_Milestone__r.MPM4_BASE__Deadline__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Milestone Deadline</label>
    <type>Date</type>
</CustomField>