force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Milestone_Grandparent__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Milestone_Grandparent__c</fullName>
    <formula>if (
 MPM4_BASE__Project_Milestone__r.MPM4_BASE__Parent_Milestone__c != null, 
 MPM4_BASE__Project_Milestone__r.MPM4_BASE__Parent_Milestone__r.Name , &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The name of the grandparent Milestone. Please Note: This field will not have a value if the &#39;Parent Milestone&#39; lookup field is not used.</inlineHelpText>
    <label>Milestone Grandparent</label>
    <type>Text</type>
</CustomField>