force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__MyTask__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__MyTask__c</fullName>
    <formula>IF(AND(MPM4_BASE__Resource__c != null, MPM4_BASE__Resource__r.MPM4_BASE__User__c != null ), MPM4_BASE__Resource__r.MPM4_BASE__User__c == $User.Id, false)</formula>
    <label>My Task</label>
    <type>Checkbox</type>
</CustomField>