force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Notification_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Notification_Email_Address__c</fullName>
    <label>Notification Email Address</label>
    <type>Email</type>
</CustomField>