force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__OwnerId__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__OwnerId__c</fullName>
    <formula>MPM4_BASE__Project_Milestone__r.OwnerId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OwnerId</label>
    <type>Text</type>
</CustomField>