force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Percent_Complete__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Percent_Complete__c</fullName>
    <description>A manually maintained field for what percentage complete a task is.</description>
    <label>Percent Complete</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>