force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Planned_Duration__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Planned_Duration__c</fullName>
    <formula>(MPM4_BASE__Due_Date__c - MPM4_BASE__Start_Date__c) + 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Planned Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>