force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Predecessor_Task__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Predecessor_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The predecessor task for this task if applicable.</inlineHelpText>
    <label>Predecessor Task</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>MPM4_BASE__Milestone1_Task__c.MPM4_BASE__Project_Milestone__c</field>
            <operation>equals</operation>
            <valueField>$Source.MPM4_BASE__Project_Milestone__c</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>MPM4_BASE__Milestone1_Task__c</referenceTo>
    <relationshipLabel>Successor Tasks</relationshipLabel>
    <relationshipName>Successor_Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>