force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Predecessor_Task_Import_Id__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Predecessor_Task_Import_Id__c</fullName>
    <label>Predecessor_Task_Import_Id__c</label>
    <length>80</length>
    <type>Text</type>
</CustomField>