force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Project_Lookup_Name__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Lookup_Name__c</fullName>
    <formula>MPM4_BASE__Project_Lookup__r.Name</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>