force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Project_Milestone__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Project_Milestone__c</fullName>
    <inlineHelpText>The milestone that this task is assigned to.</inlineHelpText>
    <label>Milestone</label>
    <referenceTo>MPM4_BASE__Milestone1_Milestone__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Project_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>