force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__ProjectId__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__ProjectId__c</fullName>
    <formula>MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectId</label>
    <type>Text</type>
</CustomField>