force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__ProjectStatus__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__ProjectStatus__c</fullName>
    <formula>TEXT(MPM4_BASE__Project_Milestone__r.MPM4_BASE__Project__r.MPM4_BASE__Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProjectStatus</label>
    <type>Text</type>
</CustomField>