force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Reminder__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder</label>
    <type>Checkbox</type>
</CustomField>