force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Required_Skills__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Required_Skills__c</fullName>
    <label>Required Skills</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MPM4_BASE__Resource_Skills</valueSetName>
    </valueSet>
</CustomField>