force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Start_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <inlineHelpText>When should this task start by?</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>