force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Start_Date_Time__c</fullName>
    <inlineHelpText>In order to schedule an Event on your Salesforce Calendar, this must be populated. Changing the start time will update your calendar as well as your project task&#39;s start date.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>