force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Sync_To__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Sync_To__c</fullName>
    <inlineHelpText>Setting this field to &#39;Salesforce Event&#39; and populating the Start Time will automatically create a Salesforce Event on your Salesforce Calendar as well as any calendars that you sync with Salesforce using third party apps.</inlineHelpText>
    <label>Sync To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Event</fullName>
            </value>
            <value>
                <fullName>Salesforce Task</fullName>
                <default>true</default>
                <label>Salesforce Task</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>