force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Task_Number__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Task_Number__c</fullName>
    <inlineHelpText>Unique number for each task and across all projects.</inlineHelpText>
    <label>Task Short ID</label>
    <type>AutoNumber</type>
</CustomField>