force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Total_Hours__c</fullName>
    <inlineHelpText>Calculated from all child time records</inlineHelpText>
    <label>Total Hours</label>
    <summarizedField>MPM4_BASE__Milestone1_Time__c.MPM4_BASE__Hours__c</summarizedField>
    <summaryForeignKey>MPM4_BASE__Milestone1_Time__c.MPM4_BASE__Project_Task__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>