force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/MPM4_BASE__Weekday_Duration__c.field-meta.xml
<CustomField>
    <fullName>MPM4_BASE__Weekday_Duration__c</fullName>
    <inlineHelpText>The workday duration between the start date and the due date.</inlineHelpText>
    <label>Workday Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>