force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/fields/Task_Resource__c.field-meta.xml
<CustomField>
    <fullName>Task_Resource__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Task Resource</label>
    <referenceTo>Resource__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>