force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/validationRules/MPM4_BASE__CannotBeBlockedIfComplete.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__CannotBeBlockedIfComplete</fullName>
    <active>true</active>
    <errorConditionFormula>if (And ( MPM4_BASE__Blocked__c == true, MPM4_BASE__Complete__c == true), true, false)</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Blocked__c</errorDisplayField>
    <errorMessage>You cannot mark a completed task as blocked.</errorMessage>
</ValidationRule>