force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/validationRules/MPM4_BASE__CannotBeCompleteIfBlocked.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__CannotBeCompleteIfBlocked</fullName>
    <active>true</active>
    <errorConditionFormula>if (and ( MPM4_BASE__Complete__c == true,  MPM4_BASE__Blocked__c ==true), true, false)</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Complete__c</errorDisplayField>
    <errorMessage>You cannot complete a task marked as blocked.</errorMessage>
</ValidationRule>