force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/validationRules/MPM4_BASE__Due_Date_Greater_Than_Milestone_Deadline.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__Due_Date_Greater_Than_Milestone_Deadline</fullName>
    <active>false</active>
    <errorConditionFormula>MPM4_BASE__Due_Date__c &gt;  MPM4_BASE__Project_Milestone__r.MPM4_BASE__Deadline__c</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Due_Date__c</errorDisplayField>
    <errorMessage>Due Date should be smaller than Milestone Deadline</errorMessage>
</ValidationRule>