force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/validationRules/MPM4_BASE__Due_Date_Smaller_Than_Milestone_Kickoff.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__Due_Date_Smaller_Than_Milestone_Kickoff</fullName>
    <active>false</active>
    <errorConditionFormula>MPM4_BASE__Due_Date__c &lt;  MPM4_BASE__Project_Milestone__r.MPM4_BASE__Kickoff__c</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Due_Date__c</errorDisplayField>
    <errorMessage>Due Date should be greater than Milestone Kickoff Date</errorMessage>
</ValidationRule>