force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/validationRules/MPM4_BASE__Must_be_blank_if_not_blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__Must_be_blank_if_not_blocked</fullName>
    <active>true</active>
    <errorConditionFormula>IF( and(MPM4_BASE__Blocked__c == false, len( MPM4_BASE__Blocked_Reason__c ) &gt; 0) , True, False)</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Blocked_Reason__c</errorDisplayField>
    <errorMessage>Must be blank if &quot;blocked&quot; is not checked.</errorMessage>
</ValidationRule>