force-app/main/default/objects/MPM4_BASE__Milestone1_Task__c/validationRules/MPM4_BASE__Must_not_be_blank_if_blocked.validationRule-meta.xml
<ValidationRule>
    <fullName>MPM4_BASE__Must_not_be_blank_if_blocked</fullName>
    <active>true</active>
    <errorConditionFormula>IF( and(MPM4_BASE__Blocked__c == true, len( MPM4_BASE__Blocked_Reason__c ) == 0) , True, False)</errorConditionFormula>
    <errorDisplayField>MPM4_BASE__Blocked_Reason__c</errorDisplayField>
    <errorMessage>If this task is blocked you must enter a reason.</errorMessage>
</ValidationRule>